src/human_study/program_34/python_err_msg.txt
File "./seq2parse/human_study/program_34/original.py", line 6
    print(word[::1] += next_word[::2])
                    ^^
SyntaxError: invalid syntax
